--- a/app/src/main/res/layout/fragment_pregunta.xml
+++ b/app/src/main/res/layout/fragment_pregunta.xml
@@ -4,9 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.novus.preuvirtual.PreguntaFragment"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    >
-
+    android:paddingRight="16dp">
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -85,12 +83,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="e.- Opción 5"/>
-
             </RadioGroup>
-
         </LinearLayout>
     </ScrollView>
-
-
-
 </FrameLayout>
