Cambios a strings de ir atras en ensayo y tiempo 0

--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -127,7 +127,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:gravity="left"
-                        android:text="Respuestas Omitidas:  " />
+                        android:text="Respuestas omitidas:  " />
 
                     <TextView
                         android:id="@+id/textRespuestasOmitidasNum"
