--- a/app/src/main/res/layout/activity_tiempo.xml
+++ b/app/src/main/res/layout/activity_tiempo.xml
@@ -14,6 +14,7 @@
     tools:context="com.novus.preuvirtual.Tiempo">
 
     <TextView
+        android:id="@+id/textTiempoRamo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:gravity="center"
