--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:id="@+id/layoutResultados"
-    tools:context="com.novus.preuvirtual.Resultados">
+    tools:context="com.novus.preuvirtual.ResultadosActivity">
 
     <ScrollView
         android:layout_height="wrap_content"
