--- a/app/src/main/res/layout/activity_time_attack.xml
+++ b/app/src/main/res/layout/activity_time_attack.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.novus.preuvirtual.TimeAttack">
+    tools:context="com.novus.preuvirtual.TimeAttackActivity">
 
     <ScrollView
         android:layout_height="wrap_content"
