Refactorizacion de clases. Generalizacion de modos de juego (Endless incompleto)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         style="@style/CustomButton"
         android:backgroundTint="@color/abc_primary_text_material_light"
         android:drawableLeft="@drawable/ic_endless_24dp"
-        android:enabled="false"
+        android:onClick="goEndless"
         android:text="Infinito" />
 
 </LinearLayout>
