--- a/app/src/main/res/layout/activity_endless.xml
+++ b/app/src/main/res/layout/activity_endless.xml
@@ -14,7 +14,7 @@
     tools:context="com.novus.preuvirtual.TimeAttackActivity">
 
     <TextView
-        android:id="@+id/textTiempoRamo"
+        android:id="@+id/textDesafioRamo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -23,13 +23,6 @@
         android:textColor="@color/textTime"
         android:textSize="20sp"
         android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/editMinutos"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:inputType="numberSigned"
-        android:maxLength="3" />
 
     <TextView
         android:layout_width="300dp"
@@ -46,4 +39,5 @@
         android:drawableLeft="@drawable/ic_play_24dp"
         android:onClick="goPlayTimeAttack"
         android:text="Comenzar" />
+
 </LinearLayout>
