--- a/app/src/main/res/layout/activity_play_endless.xml
+++ b/app/src/main/res/layout/activity_play_endless.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.novus.preuvirtual.PlayTimeAttackActivity">
+    tools:context="com.novus.preuvirtual.PlayEndlessActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -17,8 +17,19 @@
             android:id="@+id/textoTiempo"
             android:layout_alignParentTop="true"
             android:textColor="@color/textTime"
-            android:textSize="25dp"
-            android:textStyle="bold"/>
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textoCorrectas"
+            android:layout_alignParentTop="true"
+            android:textColor="@color/textTime"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_gravity="center" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/contenidoPregunta"
