--- a/app/src/main/res/layout/activity_play_endless.xml
+++ b/app/src/main/res/layout/activity_play_endless.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/contenidoTiempo"
         android:layout_above="@+id/contenidoBtnNavegación"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical" >
     </LinearLayout>
     <LinearLayout
